syntax = "proto3";
package CIS.InternalServices.NotificationService.v2;
option csharp_namespace = "CIS.InternalServices.NotificationService.v2";

message GetResultRequest {
	string NotificationId = 1;
}
